<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_white"
    tools:context="com.example.martinjonovski.chatnoir.AccountSettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_image_view"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:src="@drawable/maxresdefault"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/account_display_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/account_image_view"
        android:layout_alignStart="@+id/account_image_view"
        android:layout_below="@+id/account_image_view"
        android:layout_marginTop="21dp"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/account_desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_display_txt"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginTop="26dp"
        android:text="@string/status_default" />

    <Button
        android:id="@+id/account_changeimg_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/gradient"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:text="@string/change_image"
        android:layout_below="@+id/account_desc_txt"
        android:layout_alignStart="@+id/account_display_txt"
        android:layout_alignEnd="@+id/account_display_txt" />

    <Button
        android:id="@+id/account_status_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/circular_button"
        android:textSize="14sp"
        android:textColor="#000000"
        android:text="@string/change_status"
        android:layout_below="@+id/account_changeimg_btn"
        android:layout_alignStart="@+id/account_changeimg_btn"
        android:layout_alignEnd="@+id/account_changeimg_btn" />
</RelativeLayout>
