<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.martinjonovski.chatnoir.StartActivity">

    <EditText
        android:id="@+id/passLoginText"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_above="@+id/start_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/yourpass"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_txt" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_above="@+id/passLoginText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView2" />

    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/start_act_image_view"-->
        <!--android:layout_width="140dp"-->
        <!--android:layout_height="140dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="26dp"-->
        <!--android:src="@drawable/unnamed4"-->
        <!--app:civ_border_color="#eeeeee"-->
        <!--app:civ_border_width="2dp" />-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="search.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />
    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:text="Don't have an account? Click here"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="17sp" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ring"
        android:fontFamily="sans-serif"

        android:padding="8dp"
        android:text="@string/already_have_account"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>
