<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trackgen"
    tools:context="com.example.martinjonovski.chatnoir.RegisterActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/appbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_act_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/unnamed4"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/gradient"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_pass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/login_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_username_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Login to your Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorDarkest"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar" />


    <EditText
        android:id="@+id/login_username_txt"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_above="@+id/login_text_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView2" />

    <EditText
        android:id="@+id/login_text_pass"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_above="@+id/login_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/yourpass"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_txt" />

</RelativeLayout>
